--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -8,8 +8,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <RootNamespace>
-    </RootNamespace>
+    <RootNamespace></RootNamespace>
     <ProjectGuid>{C3D3C2B4-AE46-A6C5-7115-EF379587DA9D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
@@ -96,7 +95,7 @@
     <Compile Include="Assets\GameMain\Scripts\Entity\EntityExtension.cs" />
     <Compile Include="Assets\GameMain\Scripts\Definition\DataStruct\BuildInfo.cs" />
     <Compile Include="Assets\GameMain\Scripts\DataTable\DRArmor.cs" />
-    <Compile Include="Assets\GameMain\Scripts\Component\RotationDiagramItem.cs" />
+    <Compile Include="Assets\GameMain\Scripts\UI\UIComponent\RotationDiagramItem.cs" />
     <Compile Include="Assets\GameMain\Scripts\Extension\ComponentAutoBindTool\IAutoBindRuleHelper.cs" />
     <Compile Include="Assets\GameMain\Scripts\Utility\AssetUtility.cs" />
     <Compile Include="Assets\GameMain\Scripts\UI\UGuiForm.cs" />
@@ -121,7 +120,7 @@
     <Compile Include="Assets\GameMain\Scripts\UI\TileMapForm.cs" />
     <Compile Include="Assets\GameMain\Scripts\Base\GameEntry.cs" />
     <Compile Include="Assets\GameMain\Scripts\DataTable\DRAsteroid.cs" />
-    <Compile Include="Assets\GameMain\Scripts\Component\RaderGraphic.cs" />
+    <Compile Include="Assets\GameMain\Scripts\UI\UIComponent\RaderGraphic.cs" />
     <Compile Include="Assets\GameMain\Scripts\Game\Event\PlayerHpChangedEventArgs.cs" />
     <Compile Include="Assets\GameMain\Scripts\Game\Event\HideEnemyEventArgs.cs" />
     <Compile Include="Assets\GameMain\Scripts\Extension\PivotPreset.cs" />
@@ -139,7 +138,7 @@
     <Compile Include="Assets\GameMain\Scripts\Utility\WebUtility.cs" />
     <Compile Include="Assets\GameMain\Scripts\DataTable\DRAircraft.cs" />
     <Compile Include="Assets\GameMain\Scripts\Network\SCPacketHeader.cs" />
-    <Compile Include="Assets\GameMain\Scripts\Component\RotationDiagram.cs" />
+    <Compile Include="Assets\GameMain\Scripts\UI\UIComponent\RotationDiagram.cs" />
     <Compile Include="Assets\GameMain\Scripts\Game\Event\DamageEventArgs.cs" />
     <Compile Include="Assets\GameMain\Scripts\BindingScript\PauseMenuForm.BindComponents.cs" />
     <Compile Include="Assets\GameMain\Scripts\Network\Packet\SCHeartBeat.cs" />
@@ -175,7 +174,7 @@
     <Compile Include="Assets\GameMain\Scripts\DataTable\BinaryReaderExtension.cs" />
     <Compile Include="Assets\GameMain\Scripts\Game\TileMapData.cs" />
     <Compile Include="Assets\GameMain\Scripts\HPBar\HPBarItemObject.cs" />
-    <Compile Include="Assets\GameMain\Scripts\Component\CircleImage.cs" />
+    <Compile Include="Assets\GameMain\Scripts\UI\UIComponent\CircleImage.cs" />
     <Compile Include="Assets\GameMain\Scripts\Network\CSPacketBase.cs" />
     <Compile Include="Assets\GameMain\Scripts\Definition\Constant\Constant.AssetPriority.cs" />
     <Compile Include="Assets\GameMain\Scripts\UI\ModuleForm.cs" />
