--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -57,7 +57,8 @@
     <Analyzer Include="D:\LeiJin\Program\VisualStudio\2022\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\GameMain\Scripts\Entity\EntityData\BulletData.Behaviours.cs" />
+    <Compile Include="Assets\GameMain\Scripts\Game\Character\ChaAttribute.cs" />
+    <Compile Include="Assets\GameMain\Scripts\Game\Character\NumericType.cs" />
     <Compile Include="Assets\GameMain\Scripts\UI\DialogForm.cs" />
     <Compile Include="Assets\GameMain\Scripts\UI\BlackEdgeForm.cs" />
     <Compile Include="Assets\GameMain\Scripts\Sound\SoundExtension.cs" />
@@ -84,6 +85,7 @@
     <Compile Include="Assets\GameMain\Scripts\Entity\EntityLogic\EntityLogicWithData.cs" />
     <Compile Include="Assets\GameMain\Scripts\Procedure\ProcedureMain.cs" />
     <Compile Include="Assets\GameMain\Scripts\UI\OutlineRaycastTarget.cs" />
+    <Compile Include="Assets\GameMain\Scripts\Entity\EntityData\BulletData.BulletBehaviour.cs" />
     <Compile Include="Assets\GameMain\Scripts\Procedure\ProcedureSplash.cs" />
     <Compile Include="Assets\GameMain\Scripts\UI\UIExtension.cs" />
     <Compile Include="Assets\GameMain\Scripts\Procedure\ProcedureUpdateResources.cs" />
@@ -93,6 +95,7 @@
     <Compile Include="Assets\GameMain\Scripts\Procedure\ProcedureInitResources.cs" />
     <Compile Include="Assets\GameMain\Scripts\Entity\EntityExtension.cs" />
     <Compile Include="Assets\GameMain\Scripts\Definition\DataStruct\BuildInfo.cs" />
+    <Compile Include="Assets\GameMain\Scripts\Game\MovePreorder.cs" />
     <Compile Include="Assets\GameMain\Scripts\DataTable\DRArmor.cs" />
     <Compile Include="Assets\GameMain\Scripts\UI\UIComponent\RotationDiagramItem.cs" />
     <Compile Include="Assets\GameMain\Scripts\Extension\ComponentAutoBindTool\IAutoBindRuleHelper.cs" />
@@ -112,13 +115,13 @@
     <Compile Include="Assets\GameMain\Scripts\DataTable\DRBullet.cs" />
     <Compile Include="Assets\GameMain\Scripts\BindingScript\MainMenuForm.BindComponents.cs" />
     <Compile Include="Assets\GameMain\Scripts\Game\DamageNumber\DamageNumberComponent.cs" />
+    <Compile Include="Assets\GameMain\Scripts\Game\Character\Numeric.cs" />
     <Compile Include="Assets\GameMain\Scripts\Localization\XmlLocalizationHelper.cs" />
     <Compile Include="Assets\GameMain\Scripts\Definition\Constant\Constant.Layer.cs" />
     <Compile Include="Assets\GameMain\Scripts\Procedure\ProcedureLaunch.cs" />
     <Compile Include="Assets\GameMain\Scripts\Base\GameEntry.cs" />
     <Compile Include="Assets\GameMain\Scripts\DataTable\DRAsteroid.cs" />
     <Compile Include="Assets\GameMain\Scripts\UI\UIComponent\RaderGraphic.cs" />
-    <Compile Include="Assets\GameMain\Scripts\Game\Event\PlayerHpChangedEventArgs.cs" />
     <Compile Include="Assets\GameMain\Scripts\Game\Event\LevelOperationEventArgs.cs" />
     <Compile Include="Assets\GameMain\Scripts\Extension\PivotPreset.cs" />
     <Compile Include="Assets\GameMain\Scripts\Procedure\ProcedureCheckResources.cs" />
@@ -133,6 +136,7 @@
     <Compile Include="Assets\GameMain\Scripts\Game\DamageInfo.cs" />
     <Compile Include="Assets\GameMain\Scripts\Entity\EntityData\HeroData.cs" />
     <Compile Include="Assets\GameMain\Scripts\Utility\WebUtility.cs" />
+    <Compile Include="Assets\GameMain\Scripts\Game\Types.cs" />
     <Compile Include="Assets\GameMain\Scripts\DataTable\DRAircraft.cs" />
     <Compile Include="Assets\GameMain\Scripts\Network\SCPacketHeader.cs" />
     <Compile Include="Assets\GameMain\Scripts\UI\UIComponent\RotationDiagram.cs" />
@@ -157,6 +161,7 @@
     <Compile Include="Assets\GameMain\Scripts\Entity\EntityData\EntityData.cs" />
     <Compile Include="Assets\GameMain\Scripts\DataTable\DataTableExtension.cs" />
     <Compile Include="Assets\GameMain\Scripts\UI\InGameForm.cs" />
+    <Compile Include="Assets\GameMain\Scripts\Entity\EntityData\BulletData.CommonMethods.cs" />
     <Compile Include="Assets\GameMain\Scripts\UI\PauseMenuForm.cs" />
     <Compile Include="Assets\GameMain\Scripts\Game\Event\ShowEntityInLevelEventArgs.cs" />
     <Compile Include="Assets\GameMain\Scripts\Entity\EntityLogic\BulletLogic.cs" />
@@ -176,14 +181,13 @@
     <Compile Include="Assets\GameMain\Scripts\Definition\Constant\Constant.AssetPriority.cs" />
     <Compile Include="Assets\GameMain\Scripts\UI\ModuleForm.cs" />
     <Compile Include="Assets\GameMain\Scripts\Extension\UnityExtension.cs" />
+    <Compile Include="Assets\GameMain\Scripts\Entity\EntityData\BulletData.Behaviours.cs" />
     <Compile Include="Assets\GameMain\Scripts\Entity\EntityLogic\ProjectileLogic.cs" />
     <Compile Include="Assets\GameMain\Scripts\Extension\ComponentAutoBindTool\ComponentAutoBindTool.cs" />
     <Compile Include="Assets\GameMain\Scripts\Network\CSPacketHeader.cs" />
     <Compile Include="Assets\GameMain\Scripts\Procedure\ProcedureChangeScene.cs" />
     <Compile Include="Assets\GameMain\Scripts\Definition\Enum\CampType.cs" />
     <Compile Include="Assets\GameMain\Scripts\Utility\AIUtility.cs" />
-    <Compile Include="Assets\GameMain\Scripts\Entity\EntityData\BulletData.BulletBehaviour.cs" />
-    <Compile Include="Assets\GameMain\Scripts\Game\BulletType.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\GameMain\Configs\DefaultDictionary.xml" />
